--- a/pr33-ChatStudents_Lipina/pr33-ChatStudents_Lipina.csproj
+++ b/pr33-ChatStudents_Lipina/pr33-ChatStudents_Lipina.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\ic-online.png" />
+    <None Remove="Images\ic-user.png" />
+    <None Remove="Images\logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
@@ -17,7 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\" />
+    <Resource Include="Images\ic-user.png" />
+    <Resource Include="Images\logo.png" />
   </ItemGroup>
 
 </Project>
