--- a/pr33-ChatStudents_Lipina/pr33-ChatStudents_Lipina.csproj
+++ b/pr33-ChatStudents_Lipina/pr33-ChatStudents_Lipina.csproj
@@ -27,4 +27,8 @@
     <Resource Include="Images\logo.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Items\" />
+  </ItemGroup>
+
 </Project>
